some other changes

--- a/views/index.jade
+++ b/views/index.jade
@@ -7,3 +7,4 @@ span.label=payingCards.length
           if card.suit == suit
            span.label=card.card
 a(href="/removeCard")!= "Remove Card"
+a(href="/removeTopCard")!= "Remove top Card"
