--- a/views/index.jade
+++ b/views/index.jade
@@ -5,6 +5,8 @@ span.label=payingCards.length
   - each card in payingCards
            span.label=" " + card.suit + card.card
 div
+ a(href="/removeCard")!= "Remove Card"
+div
  a(href="/shuffleCard")!= "Shuffle Card"
 div
  a(href="/removeTopCard")!= "Remove Top Card"
