added unit testing

--- a/views/index.jade
+++ b/views/index.jade
@@ -6,7 +6,7 @@ span.label=payingCards.length?payingCards.length:null
            span.label=" " + card.suit + card.card
 
  if payingCards.length===0
-    h1 "Card is empty"
+    h1 "Deck is empty"
 
 if payingCards.length
     div
